openpearl-code/testsuite/must_not_compile/00_basics/008_multiple_system_statements.expect
008_multiple_system_statements.prl:4:0: ERROR : Syntax error :mismatched input 'SYSTEM' expecting {'MODEND', 'PROBLEM', '__cpp__', '__cpp', ID}
SYSTEM;
     ^
