openpearl-code/testsuite/must_not_compile/00_basics/008_multiple_system_statements.prl
MODULE(m1);
SYSTEM;

SYSTEM;

MODEND;
